[gd_scene format=4 uid="uid://cbaoajew0ap22"]

[ext_resource type="Script" uid="uid://coymbc6sqqmqh" path="res://Scenes/Level1.gd" id="1_slnnj"]
[ext_resource type="Texture2D" uid="uid://b8fee4t83c71d" path="res://ASSETS/tilesheet/TileMapGameJam2026v1.png" id="2_t3or0"]
[ext_resource type="PackedScene" uid="uid://b4rw44noc7id2" path="res://Characters/Enemy.tscn" id="3_ysn8j"]
[ext_resource type="Texture2D" uid="uid://kjee1lex68ug" path="res://ASSETS/tilesheet/TileMapGameJam2026v2.png" id="4_6ll4n"]
[ext_resource type="PackedScene" uid="uid://ljmsp3p32xk2" path="res://Characters/player.tscn" id="5_kylad"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kln2b"]
load_path = "res://.godot/imported/TileMapGameJam2026v1.png-9e866ac35b2a94f5954e367fa723e700.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_slnnj"]
texture = SubResource("CompressedTexture2D_kln2b")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0

[sub_resource type="TileSet" id="TileSet_pbw6q"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetAtlasSource_slnnj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t3or0"]
texture = ExtResource("2_t3or0")
texture_region_size = Vector2i(128, 128)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jw32o"]
tile_size = Vector2i(128, 128)
sources/2 = SubResource("TileSetAtlasSource_t3or0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ysn8j"]
texture = ExtResource("2_t3or0")
texture_region_size = Vector2i(128, 128)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
17:0/0 = 0
17:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
17:0/0/physics_layer_1/polygon_0/one_way = true
18:0/0 = 0
18:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
18:0/0/physics_layer_1/polygon_0/one_way = true
19:0/0 = 0
19:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
19:0/0/physics_layer_1/polygon_0/one_way = true
20:0/0 = 0
20:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
20:0/0/physics_layer_1/polygon_0/one_way = true
21:0/0 = 0
21:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
21:0/0/physics_layer_1/polygon_0/one_way = true
22:0/0 = 0
22:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
22:0/0/physics_layer_1/polygon_0/one_way = true
23:0/0 = 0
23:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
23:0/0/physics_layer_1/polygon_0/one_way = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ll4n"]
texture = ExtResource("4_6ll4n")
texture_region_size = Vector2i(128, 128)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
18:0/0 = 0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
20:0/0 = 0
20:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
21:0/0 = 0
21:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
22:0/0 = 0
22:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
22:0/0/physics_layer_1/polygon_0/one_way = true
23:0/0 = 0
23:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
23:0/0/physics_layer_1/polygon_0/one_way = true
24:0/0 = 0
24:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
24:0/0/physics_layer_1/polygon_0/one_way = true
25:0/0 = 0
25:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
25:0/0/physics_layer_1/polygon_0/one_way = true
26:0/0 = 0
26:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
26:0/0/physics_layer_1/polygon_0/one_way = true
27:0/0 = 0
27:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
27:0/0/physics_layer_1/polygon_0/one_way = true
28:0/0 = 0
28:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
28:0/0/physics_layer_1/polygon_0/one_way = true
29:0/0 = 0
29:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -32, -64, -32)
29:0/0/physics_layer_1/polygon_0/one_way = true
30:0/0 = 0
30:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
31:0/0 = 0
31:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
32:0/0 = 0
32:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
33:0/0 = 0
33:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
34:0/0 = 0
34:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
35:0/0 = 0
35:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
36:0/0 = 0
36:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
37:0/0 = 0
37:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
38:0/0 = 0
38:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_kln2b"]
tile_size = Vector2i(128, 128)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 16
physics_layer_1/collision_mask = 0
navigation_layer_0/layers = 1
sources/2 = SubResource("TileSetAtlasSource_ysn8j")
sources/3 = SubResource("TileSetAtlasSource_6ll4n")

[sub_resource type="GDScript" id="GDScript_r150o"]
script/source = "extends TileMapLayer

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float):
	var tile"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slnnj"]
size = Vector2(77.5, 79.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3or0"]
size = Vector2(76.5, 78)

[node name="Level1" type="Node2D" unique_id=523519200]
script = ExtResource("1_slnnj")

[node name="Backgroundwall" type="TileMapLayer" parent="." unique_id=1161307284]
tile_map_data = PackedByteArray("AAAXAAEAAQAHAAAAAAAXAAAAAQAHAAAAAAAXAP//AQAHAAAAAAAXAP7/AQAHAAAAAAAXAP3/AQAHAAAAAAAXAPz/AQAHAAAAAAAXAPv/AQAHAAAAAAAWAPv/AQAHAAAAAAAVAPv/AQAHAAAAAAAVAPz/AQAHAAAAAAAVAP3/AQAHAAAAAAAVAP7/AQAHAAAAAAAVAP//AQAHAAAAAAAVAAAAAQAHAAAAAAAVAAEAAQAHAAAAAAAWAAEAAQACAAAAAAAWAAAAAQAHAAAAAAAWAP//AQAHAAAAAAAWAP7/AQAHAAAAAAAWAP3/AQAHAAAAAAAWAPz/AQAHAAAAAAATAPv/AQAHAAAAAAASAPv/AQAHAAAAAAARAPv/AQADAAAAAAAQAPv/AQACAAAAAAAPAPv/AQADAAAAAAAOAPv/AQACAAAAAAANAPv/AQADAAAAAAAMAPv/AQAHAAAAAAALAPv/AQAHAAAAAAAKAPv/AQAHAAAAAAAJAPv/AQAHAAAAAAAIAPv/AQAHAAAAAAAHAPv/AQAEAAAAAAAGAPv/AQAGAAAAAAAFAPv/AQAEAAAAAAAEAPv/AQAGAAAAAAADAPv/AQAEAAAAAAACAPv/AQAHAAAAAAABAPv/AQAHAAAAAAABAPz/AQAHAAAAAAABAP3/AQAHAAAAAAABAP7/AQAHAAAAAAABAP//AQAHAAAAAAABAAAAAQAHAAAAAAABAAEAAQAHAAAAAAACAAEAAQAHAAAAAAADAAEAAQAGAAAAAAAEAAEAAQAGAAAAAAAFAAEAAQAGAAAAAAAGAAAAAQAFAAAAAAAHAAAAAQAEAAAAAAAIAAAAAQAHAAAAAAAJAAAAAQAHAAAAAAAKAAAAAQAHAAAAAAALAAEAAQAHAAAAAAAKAAEAAQAHAAAAAAAJAAEAAQAHAAAAAAAIAAEAAQAHAAAAAAAHAAEAAQAGAAAAAAAGAAEAAQAGAAAAAAAMAAEAAQAHAAAAAAANAAEAAQACAAAAAAAOAAEAAQACAAAAAAAPAAEAAQACAAAAAAAQAAEAAQACAAAAAAARAAEAAQACAAAAAAASAAEAAQAHAAAAAAATAAEAAQAHAAAAAAATAAAAAQAHAAAAAAATAP//AQAHAAAAAAATAP7/AQAHAAAAAAATAP3/AQAHAAAAAAASAP3/AQAHAAAAAAASAPz/AQAHAAAAAAATAPz/AQAHAAAAAAASAP7/AQAHAAAAAAASAP//AQAHAAAAAAASAAAAAQAHAAAAAAARAAAAAQADAAAAAAARAP//AQACAAAAAAAQAP//AQADAAAAAAAQAP7/AQACAAAAAAAQAP3/AQABAAAAAAARAP3/AQACAAAAAAARAP7/AQADAAAAAAAPAP7/AQADAAAAAAAPAP3/AQACAAAAAAAPAPz/AQADAAAAAAAQAPz/AQADAAAAAAARAPz/AQADAAAAAAAPAP//AQACAAAAAAAOAP7/AQACAAAAAAAOAP//AQADAAAAAAAQAAAAAQABAAAAAAANAP//AQACAAAAAAANAP7/AQADAAAAAAANAP3/AQACAAAAAAAMAP//AQAHAAAAAAAMAP7/AQAHAAAAAAANAPz/AQADAAAAAAAOAPz/AQADAAAAAAAOAAAAAQABAAAAAAAMAAAAAQAHAAAAAAAMAP3/AQAHAAAAAAANAAAAAQADAAAAAAALAAAAAQAHAAAAAAAKAP//AQAHAAAAAAALAP7/AQAHAAAAAAALAP3/AQAHAAAAAAALAP//AQAHAAAAAAAKAP7/AQAHAAAAAAAKAP3/AQAHAAAAAAAJAP7/AQAHAAAAAAAJAP//AQAHAAAAAAAIAP//AQAHAAAAAAAIAP7/AQAHAAAAAAAJAP3/AQAHAAAAAAAKAPz/AQAHAAAAAAALAPz/AQAHAAAAAAAIAP3/AQAHAAAAAAAJAPz/AQAHAAAAAAAMAPz/AQAHAAAAAAAIAPz/AQAHAAAAAAAHAPz/AQAEAAAAAAAGAP3/AQAFAAAAAAAFAP3/AQAGAAAAAAAHAP3/AQAGAAAAAAAHAP7/AQAEAAAAAAAHAP//AQAGAAAAAAAGAP//AQAEAAAAAAAFAP7/AQAEAAAAAAAGAPz/AQAEAAAAAAAGAP7/AQAGAAAAAAAFAP//AQAGAAAAAAAEAP//AQAEAAAAAAAEAP7/AQAGAAAAAAAEAP3/AQAFAAAAAAAFAAAAAQAEAAAAAAAEAAAAAQAFAAAAAAADAP7/AQAEAAAAAAADAP//AQAGAAAAAAADAP3/AQAGAAAAAAADAAAAAQAEAAAAAAACAAAAAQAHAAAAAAACAP//AQAHAAAAAAACAP3/AQAHAAAAAAACAPz/AQAHAAAAAAADAPz/AQAEAAAAAAAEAPz/AQAEAAAAAAACAP7/AQAHAAAAAAAFAPz/AQAEAAAAAAAXAPr/AQAHAAAAAAAWAPr/AQAHAAAAAAAVAPr/AQAHAAAAAAAPAAAAAQADAAAAAAAOAP3/AQABAAAAAAAEAPr/AQAFAAAAAAAGAPr/AQAFAAAAAAAEAPn/AQAEAAAAAAAGAPn/AQAEAAAAAAADAPn/AQAEAAAAAAAHAPn/AQAEAAAAAAAFAPn/AQAEAAAAAAADAPr/AQAGAAAAAAAFAPr/AQAGAAAAAAAHAPr/AQAGAAAAAAABAPr/AQAHAAAAAAACAPr/AQAHAAAAAAACAPn/AQAHAAAAAAABAPn/AQAHAAAAAAAIAPr/AQAHAAAAAAAJAPr/AQAHAAAAAAAKAPr/AQAHAAAAAAALAPr/AQAHAAAAAAAMAPr/AQAHAAAAAAAMAPn/AQAHAAAAAAALAPn/AQAHAAAAAAAKAPn/AQAHAAAAAAAJAPn/AQAHAAAAAAAIAPn/AQAHAAAAAAASAPr/AQAHAAAAAAATAPr/AQAHAAAAAAATAPn/AQAHAAAAAAASAPn/AQAHAAAAAAAVAPn/AQAHAAAAAAAWAPn/AQAHAAAAAAAXAPn/AQAHAAAAAAAOAPr/AQABAAAAAAAQAPr/AQABAAAAAAANAPn/AQADAAAAAAAOAPn/AQADAAAAAAAPAPn/AQADAAAAAAAQAPn/AQADAAAAAAARAPn/AQADAAAAAAANAPr/AQACAAAAAAAPAPr/AQACAAAAAAARAPr/AQACAAAAAAAXAPj/AQAHAAAAAAAWAPj/AQAHAAAAAAAVAPj/AQAHAAAAAAATAPj/AQAHAAAAAAASAPj/AQAHAAAAAAARAPj/AQAHAAAAAAAQAPj/AQAHAAAAAAAPAPj/AQAHAAAAAAAOAPj/AQAHAAAAAAANAPj/AQAHAAAAAAAMAPj/AQAHAAAAAAALAPj/AQAHAAAAAAAKAPj/AQAHAAAAAAAJAPj/AQAHAAAAAAAIAPj/AQAHAAAAAAAHAPj/AQAHAAAAAAAGAPj/AQAHAAAAAAAFAPj/AQAHAAAAAAAEAPj/AQAHAAAAAAADAPj/AQAHAAAAAAACAPj/AQAHAAAAAAABAPj/AQAHAAAAAAA=")
tile_set = SubResource("TileSet_pbw6q")
collision_enabled = false

[node name="Pillartiles" type="TileMapLayer" parent="." unique_id=648599163]
position = Vector2(1, -1)
tile_map_data = PackedByteArray("AAAHAP//AgAJAAAAAAAHAAEAAgAKAAAAAAAHAAAAAgAJAAAAAAACAAEAAgAKAAAAAAAFAAEAAgAKAAAAAAAOAAEAAgAKAAAAAAAQAAEAAgAKAAAAAAALAAEAAgAKAAAAAAALAAAAAgAJAAAAAAALAP//AgAJAAAAAAAFAAAAAgAJAAAAAAAFAP//AgAJAAAAAAAFAP7/AgAJAAAAAAAFAP3/AgAJAAAAAAACAAAAAgAJAAAAAAACAP//AgAJAAAAAAACAP7/AgAJAAAAAAACAP3/AgAJAAAAAAAOAAAAAgAJAAAAAAAQAAAAAgAJAAAAAAAJAAAAAgAJAAAAAAAJAP//AgAJAAAAAAAJAAEAAgAKAAAAAAASAAEAAgAKAAAAAAAPAAEAAgAKAAAAAAASAAAAAgAJAAAAAAAPAAAAAgAJAAAAAAAPAP//AgAJAAAAAAASAP//AgAJAAAAAAASAP7/AgAJAAAAAAAPAP7/AgAJAAAAAAAIAAEAAgAKAAAAAAAPAP3/AgAJAAAAAAAPAPz/AgAJAAAAAAAPAPv/AgAJAAAAAAAIAAAAAgAJAAAAAAAIAP//AgAJAAAAAAAIAP7/AgAJAAAAAAAIAP3/AgAJAAAAAAAIAPz/AgAJAAAAAAAIAPv/AgAJAAAAAAAGAAEAAgAKAAAAAAAGAAAAAgAJAAAAAAAGAP//AgAJAAAAAAAGAP7/AgAJAAAAAAAGAP3/AgAJAAAAAAAGAPz/AgAJAAAAAAAGAPv/AgAJAAAAAAAGAPr/AgAJAAAAAAAGAPn/AgAJAAAAAAA=")
tile_set = SubResource("TileSet_jw32o")
collision_enabled = false

[node name="Enemy" parent="." unique_id=276410907 instance=ExtResource("3_ysn8j")]
position = Vector2(998, 94)

[node name="Foreground" type="TileMapLayer" parent="." unique_id=1261206471]
tile_map_data = PackedByteArray("AAAAAAIAAgALAAAAAAAAAAMAAgAHAAAAAAAAAAQAAgAHAAAAAAAAAAUAAgAHAAAAAAAAAAYAAgAHAAAAAAABAAIAAgALAAAAAAABAAMAAgAHAAAAAAABAAQAAgAHAAAAAAABAAUAAgAHAAAAAAABAAYAAgAHAAAAAAACAAIAAgALAAAAAAACAAMAAgAHAAAAAAACAAQAAgAHAAAAAAACAAUAAgAHAAAAAAACAAYAAgAHAAAAAAADAAIAAgALAAAAAAADAAMAAgAHAAAAAAADAAQAAgAHAAAAAAADAAUAAgAHAAAAAAADAAYAAgAHAAAAAAAEAAIAAgAMAAAAAAAEAAMAAgAHAAAAAAAEAAQAAgAHAAAAAAAEAAUAAgAHAAAAAAAEAAYAAgAHAAAAAAAFAAIAAgANAAAAAAAFAAMAAgAHAAAAAAAFAAQAAgAHAAAAAAAFAAUAAgAHAAAAAAAFAAYAAgAHAAAAAAAGAAIAAgANAAAAAAAGAAMAAgAHAAAAAAAGAAQAAgAHAAAAAAAGAAUAAgAHAAAAAAAGAAYAAgAHAAAAAAAHAAIAAgAOAAAAAAAHAAMAAgAHAAAAAAAHAAQAAgAHAAAAAAAHAAUAAgAHAAAAAAAHAAYAAgAHAAAAAAAIAAIAAgAOAAAAAAAIAAMAAgAHAAAAAAAIAAQAAgAHAAAAAAAIAAUAAgAHAAAAAAAIAAYAAgAHAAAAAAAJAAIAAgAPAAAAAAAJAAMAAgAHAAAAAAAJAAQAAgAHAAAAAAAJAAUAAgAHAAAAAAAJAAYAAgAHAAAAAAAKAAIAAgAPAAAAAAAKAAMAAgAHAAAAAAAKAAQAAgAHAAAAAAAKAAUAAgAHAAAAAAAKAAYAAgAHAAAAAAALAAIAAgAQAAAAAAALAAMAAgAHAAAAAAALAAQAAgAHAAAAAAALAAUAAgAHAAAAAAALAAYAAgAHAAAAAAAMAAIAAgALAAAAAAAMAAMAAgAHAAAAAAAMAAQAAgAHAAAAAAAMAAUAAgAHAAAAAAAMAAYAAgAHAAAAAAANAAIAAgALAAAAAAANAAMAAgAHAAAAAAANAAQAAgAHAAAAAAANAAUAAgAHAAAAAAANAAYAAgAHAAAAAAAOAAIAAgALAAAAAAAOAAMAAgAHAAAAAAAOAAQAAgAHAAAAAAAOAAUAAgAHAAAAAAAOAAYAAgAHAAAAAAAPAAIAAgALAAAAAAAPAAMAAgAHAAAAAAAPAAQAAgAHAAAAAAAPAAUAAgAHAAAAAAAPAAYAAgAHAAAAAAAQAAIAAgALAAAAAAAQAAMAAgAHAAAAAAAQAAQAAgAHAAAAAAAQAAUAAgAHAAAAAAAQAAYAAgAHAAAAAAARAAIAAgALAAAAAAARAAMAAgAHAAAAAAARAAQAAgAHAAAAAAARAAUAAgAHAAAAAAARAAYAAgAHAAAAAAASAAIAAgALAAAAAAASAAMAAgAHAAAAAAASAAQAAgAHAAAAAAASAAUAAgAHAAAAAAASAAYAAgAHAAAAAAATAAIAAgALAAAAAAATAAMAAgAHAAAAAAATAAQAAgAHAAAAAAATAAUAAgAHAAAAAAATAAYAAgAHAAAAAAAUAAIAAgALAAAAAAAUAAMAAgAHAAAAAAAUAAQAAgAHAAAAAAAUAAUAAgAHAAAAAAAUAAYAAgAHAAAAAAAOAAAAAgAUAAAAAAAPAAAAAgAVAAAAAAAQAAAAAgAXAAAAAAAJAP//AgATAAAAAAAIAP//AgASAAAAAAAHAP//AgARAAAAAAALAP//AwAdAAAAAAAVAAIAAgALAAAAAAAWAAIAAgALAAAAAAAXAAIAAgALAAAAAAAUAAEAAwAkAAAAAAAUAAAAAwAkAAAAAAAUAP//AwAkAAAAAAAUAP7/AwAkAAAAAAAUAP3/AwAkAAAAAAAUAPz/AwAkAAAAAAAUAPv/AwAkAAAAAAAAAAEAAwAjAAAAAAAAAAAAAwAjAAAAAAAAAP//AwAjAAAAAAAAAP7/AwAjAAAAAAAAAP3/AwAjAAAAAAAAAPz/AwAjAAAAAAAAAPv/AwAjAAAAAAARAP7/AgASAAAAAAASAP7/AgATAAAAAAATAPz/AgARAAAAAAAVAAYAAgAHAAAAAAAVAAUAAgAHAAAAAAAVAAQAAgAHAAAAAAAVAAMAAgAHAAAAAAAWAAMAAgAHAAAAAAAXAAMAAgAHAAAAAAAXAAQAAgAHAAAAAAAXAAUAAgAHAAAAAAAWAAUAAgAHAAAAAAAWAAYAAgAHAAAAAAAWAAQAAgAHAAAAAAAXAAYAAgAHAAAAAAAYAAYAAgAHAAAAAAAYAAUAAgAHAAAAAAAYAAQAAgAHAAAAAAAYAAMAAgAHAAAAAAAYAAIAAgALAAAAAAAYAAEAAwAkAAAAAAAYAAAAAwAkAAAAAAAYAP//AwAkAAAAAAAYAP7/AwAkAAAAAAAYAP3/AwAkAAAAAAAYAPz/AwAkAAAAAAAYAPv/AwAkAAAAAAACAP3/AgAUAAAAAAADAP3/AgAVAAAAAAAEAP3/AgAWAAAAAAAFAP3/AgAXAAAAAAAPAP7/AgARAAAAAAAQAP7/AgASAAAAAAAAAPr/AwAjAAAAAAAAAPn/AwAjAAAAAAAUAPr/AwAkAAAAAAAUAPn/AwAkAAAAAAAYAPr/AwAkAAAAAAAYAPn/AwAkAAAAAAAYAPj/AwAkAAAAAAAXAPj/AgASAAAAAAAWAPj/AgASAAAAAAAVAPj/AgASAAAAAAAUAPj/AwAkAAAAAAATAPj/AgASAAAAAAASAPj/AgASAAAAAAARAPj/AgASAAAAAAAQAPj/AgASAAAAAAAPAPj/AgASAAAAAAAOAPj/AgASAAAAAAANAPj/AgASAAAAAAAMAPj/AgASAAAAAAALAPj/AgASAAAAAAAKAPj/AgASAAAAAAAJAPj/AgASAAAAAAAIAPj/AgASAAAAAAAHAPj/AgASAAAAAAAGAPj/AgASAAAAAAAFAPj/AgASAAAAAAAEAPj/AgASAAAAAAADAPj/AgASAAAAAAACAPj/AgASAAAAAAABAPj/AgASAAAAAAAAAPj/AwAjAAAAAAAVAPr/AgASAAAAAAAWAPr/AgASAAAAAAAXAPr/AgASAAAAAAAVAPz/AgASAAAAAAAWAPz/AgASAAAAAAAXAPz/AgASAAAAAAAVAP7/AgASAAAAAAAWAP7/AgASAAAAAAAXAP7/AgASAAAAAAAVAAAAAgASAAAAAAAWAAAAAgASAAAAAAAXAAAAAgASAAAAAAAPAPv/AgAXAAAAAAAIAPv/AgAUAAAAAAAJAPv/AgAVAAAAAAAKAPv/AgAVAAAAAAAOAPv/AgAWAAAAAAANAPv/AgAWAAAAAAAMAPv/AgAWAAAAAAALAPv/AgAVAAAAAAADAPn/AgASAAAAAAACAPn/AgASAAAAAAAGAPn/AgATAAAAAAAFAPn/AgASAAAAAAAEAPn/AgASAAAAAAABAPn/AgASAAAAAAA=")
tile_set = SubResource("TileSet_kln2b")
script = SubResource("GDScript_r150o")

[node name="Player" parent="." unique_id=726463777 instance=ExtResource("5_kylad")]
position = Vector2(1650, -188)

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=36016344]
zoom = Vector2(0.5, 0.5)

[node name="GoldMask" type="Area2D" parent="." unique_id=1603330674]
position = Vector2(2862, 171)

[node name="ColorRect" type="ColorRect" parent="GoldMask" unique_id=2137297323]
offset_left = -18.0
offset_top = -18.0
offset_right = 62.0
offset_bottom = 62.0
color = Color(0.80784315, 0.5686275, 0.007843138, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoldMask" unique_id=1920922624]
position = Vector2(21.25, 22.125)
shape = SubResource("RectangleShape2D_slnnj")

[node name="RedMask" type="Area2D" parent="." unique_id=1248394452]
position = Vector2(2486, -590)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedMask" unique_id=204059350]
position = Vector2(22.75, 30)
shape = SubResource("RectangleShape2D_t3or0")

[node name="ColorRect" type="ColorRect" parent="RedMask" unique_id=1272503012]
offset_left = -18.0
offset_top = -9.0
offset_right = 62.0
offset_bottom = 71.0
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="GoldMask" to="." method="_on_door_to_level_2_body_entered"]
[connection signal="body_entered" from="RedMask" to="." method="_on_red_mask_body_entered"]
